--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Отправьте запрос</title>
     <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
@@ -69,7 +70,7 @@
 
 	  		<section class="send-request">
 		  		<button class="rectangle rectangle-big" type="submit">Отправить запрос</button>
-		  		<p class="comment">Нажимая на&nbsp;кнопку, вы даете согласие на&nbsp;обработку персональных данных и соглашаетесь с&nbsp;политикой конфиденциальности.</p>
+		  		<p class="comment">Нажимая на&nbsp;кнопку, вы даете согласие на&nbsp;обработку персональных данных и&nbsp;соглашаетесь с&nbsp;политикой конфиденциальности.</p>
 	  		</section>
   		</div>
   		<div class="right-column"></div>
